--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,34 +2,44 @@ name: Build and Package
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.10
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pyinstaller
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
+          pip install -r requirements.txt
+          pip freeze > installed_packages.txt # List installed packages for debugging
 
-    - name: Build executable
-      run: pyinstaller --onefile --windowed main.py
+      - name: Build executable
+        run: |
+          pyinstaller --onefile --windowed main.py 
+          if errorlevel 1 exit /b 1 # Fail the job if PyInstaller errors
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: executable
-        path: dist/
+      - name: Upload Logs (on failure) 
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-logs
+          path: installed_packages.txt
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: executable
+          path: dist/
