--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,18 +17,19 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install pyinstaller
         pip install -r requirements.txt
 
     - name: Build executable
       run: pyinstaller --onefile --windowed main.py
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v2
       with:
         name: executable
         path: dist/
