--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Package
+name: Build ComicViewer Executable
 
 on:
   push:
@@ -9,27 +9,27 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
+    - uses: actions/checkout@v2
+    
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.10
-
+        python-version: '3.10'
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
         pip install -r requirements.txt
-
+        pip install pyinstaller
+    
     - name: Build executable
-      run: pyinstaller --onefile --windowed main.py
-
+      run: |
+        pyinstaller --onefile --windowed --add-data "*.json;." --add-data "*.txt;." --name ComicViewer comic_viewer.py
+    
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: executable
-        path: dist/
+        name: ComicViewer
+        path: dist/ComicViewer.exe
