--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,21 @@
-name: Build ComicViewer Executable
+
+name: Build Executable
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 jobs:
   build:
     runs-on: windows-latest
-    
+
     steps:
     - uses: actions/checkout@v2
     
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10.14'
+        python-version: '3.x'
     
     - name: Install dependencies
       run: |
@@ -24,12 +23,27 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
     
-    - name: Build executable
-      run: |
-        pyinstaller --onefile --windowed --add-data "*.json;." --add-data "*.txt;." --add-data "*.py;." --hidden-import rarfile --name ComicViewer main.py
+    - name: Build executable with PyInstaller
+      run: pyinstaller --onefile --windowed --name=ComicViewer main.py
     
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: ComicViewer
-        path: dist/ComicViewer.exe
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    
+    - name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/ComicViewer.exe
+        asset_name: ComicViewer.exe
+        asset_content_type: application/vnd.microsoft.portable-executable
+    
