--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Build Executable
 
 on:
@@ -8,35 +7,43 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    
+
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
-    
+
     - name: Build executable with PyInstaller
       run: pyinstaller --onefile --windowed --name=ComicViewer main.py
-    
+
+    - name: Create Tag
+      id: create_tag
+      run: |
+        TAG_NAME="v1.0.$(date +'%s')"
+        echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
+        git tag ${TAG_NAME}
+        git push origin ${TAG_NAME}
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ env.TAG_NAME }}
+        release_name: Release ${{ env.TAG_NAME }}
         draft: false
         prerelease: false
-    
+
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
       env:
@@ -46,4 +53,3 @@ jobs:
         asset_path: ./dist/ComicViewer.exe
         asset_name: ComicViewer.exe
         asset_content_type: application/vnd.microsoft.portable-executable
-    
