--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,11 @@ jobs:
     - name: Create Tag
       id: create_tag
       run: |
-        TAG_NAME="v1.0.$(date +'%s')"
-        echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
-        git tag ${TAG_NAME}
-        git push origin ${TAG_NAME}
+        $TAG_NAME = "v1.0.$(Get-Date -UFormat %s)"
+        echo "TAG_NAME=$TAG_NAME" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        git tag $TAG_NAME
+        git push origin $TAG_NAME
+      shell: pwsh
 
     - name: Create Release
       id: create_release
